add devauth and j25 args